commiting the new features adding events editing and viewing while also updating the dashboard

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -457,11 +457,16 @@ body {
 	padding: 16px 0;
 }
 #content main .table-data .order table tr td:first-child {
+	padding-left: 10px;
+}
+
+/* #content main .table-data .order.prime table tr td:first-child {
 	display: flex;
 	align-items: center;
 	grid-gap: 12px;
 	padding-left: 6px;
-}
+} */
+
 #content main .table-data .order table td img {
 	width: 36px;
 	height: 36px;
